--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Bootstrap Practice</title>
   </head>
   <body>
+  <div class="container-fluid mt-3">
+    <div class="row">
+      <div class="col-sm-3 p-3 bg-info text-black">1</div>
+      <div class="col-sm-3 p-3 bg-warning text-black">2</div>
+      <div class="col-sm-3 p-3 bg-light text-black">3</div>
+      <div class="col-sm-3 p-3 bg-danger text-black">4</div>
+    </div>
+  <h1> Bootstrap practice</h1>
+  <h2
+  <div class="alert alert-success bg-info">
+    <strong>Success!</strong> Positive Affirmations !
+  </div>
+</h2>
+<h3>
+  <div class="progress">
+   <div class="progress-bar bg-info" style="width:70%">70%</div>
+ </h3>
+ <div class="spinner-border"></div>
 
-  </body>
+ <table class="table table-dark">
+    <thead>
+      <tr>
+        <th>Month</th>
+        <th>Date</th>
+        <th>Year</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>July</td>
+        <td>18</td>
+        <td>2006</td>
+      </tr>
+      <tr>
+        <td>September</td>
+        <td>24</td>
+        <td>2001</td>
+      </tr>
+      <tr>
+        <td>December</td>
+        <td>29</td>
+        <td>1999</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<img src="download.jfif" class="rounded-circle"
+alt="Treehouse" width="304" height="236">
+</body>
+<footer>
+  <form action="/action_page.php">
+      <div class="mb-3 mt-3">
+        <label for="comment">Comments:</label>
+        <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
 </html>
