jumbotron and alerts

--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
       <div class="col-sm-3 p-3 bg-danger text-black">4</div>
     </div>
   <h1> Bootstrap practice</h1>
+<div class= "offcanvas offcanvas-end" id="demo">
+  <div class= "offcanvas-header">
+    <h1 class= "offcanvas- header">
+      <h1 class= "offcanvas-title"> Heading
+
   <h2
-  <div class="alert alert-success bg-info">
+  <div class="alert alert-success alert-dismissible bg-info">
+    <button type= "button" class="btn-close" data-bs-dismiss="alert"></button>
     <strong>Success!</strong> Positive Affirmations !
   </div>
 </h2>
@@ -27,6 +33,11 @@
    <div class="progress-bar bg-info" style="width:70%">70%</div>
  </h3>
  <div class="spinner-border"></div>
+ <div class= "form- floating mb-3 m-3">
+   <input type ="text" class="form-control" id="email"
+   placeholder=""Enter your email" name= "email">
+   <label for="email">Email</label>
+    </div>
 
  <table class="table table-dark">
     <thead>
@@ -57,6 +68,8 @@
 </div>
 <img src="download.jfif" class="rounded-circle"
 alt="Treehouse" width="304" height="236">
+<div class= "mt-4 p-5 bg-primary text-white rounded">
+  <h4> Jumbotron </h4>
 </body>
 <footer>
   <form action="/action_page.php">
