button group and butto outline

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
       <div class="col-sm-3 p-3 bg-danger text-black">4</div>
     </div>
   <h1> Bootstrap practice</h1>
-<div class= "offcanvas offcanvas-end" id="demo">
-  <div class= "offcanvas-header">
-    <h1 class= "offcanvas- header">
-      <h1 class= "offcanvas-title"> Heading
 
   <h2
   <div class="alert alert-success alert-dismissible bg-info">
@@ -34,11 +30,21 @@
  </h3>
  <div class="spinner-border"></div>
  <div class= "form- floating mb-3 m-3">
-   <input type ="text" class="form-control" id="email"
-   placeholder=""Enter your email" name= "email">
+   <input type ="text" class="form-control" id="email" placeholder="Enter your email" name= "email">
+   <div
    <label for="email">Email</label>
     </div>
-
+    <div class= "btn-group">
+      <button type="button" class="btn btn-warning">B1</button>
+      <button type= "button" class="btn btn-primary">B2</button>
+      <div class="btn-group">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">B3</button>
+        <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Sony</button>
+      <button type="button" class="btn btn-outline-danger">Danger</button>
+  </div>
+</div>
+<button type="button" class="btn btn-outline-danger btn-lg">Click Me!</button>
  <table class="table table-dark">
     <thead>
       <tr>
