--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
 <img src="download.jfif" class="rounded-circle"
 alt="Treehouse" width="304" height="236">
 <div class= "mt-4 p-5 bg-primary text-white rounded">
+  <div class="card" style="width:400px">
+    <div class="card-body">
+      <h4 class="card-title">Jane Doe</h4>
+      <p class="card-text">This is me oracticing card</p>
+      <a href="#" class="btn btn-primary">See Profile</a>
+    </div>
+    <img class="card-img-bottom" src="download.jfif" alt="Card image" style="width:100%">
+  </div>
+</div>
   <h4> Jumbotron </h4>
 </body>
 <footer>
