--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <head>
     <meta charset="utf-8">
     <title>Bootstrap Practice</title>
+
   </head>
   <body>
+
   <div class="container-fluid mt-3">
     <div class="row">
       <div class="col-sm-3 p-3 bg-info text-black">1</div>
@@ -16,13 +18,17 @@
       <div class="col-sm-3 p-3 bg-light text-black">3</div>
       <div class="col-sm-3 p-3 bg-danger text-black">4</div>
     </div>
-  <h1> Bootstrap practice</h1>
-
-  <h2
+  <h1> Bootstrap practice
+    <div class= "progress">
+<div class="progress-bar bg-info progress-bar-striped progress-bar-animated" style="width:50%"></div>
+</h1>
+  <h2>
   <div class="alert alert-success alert-dismissible bg-info">
     <button type= "button" class="btn-close" data-bs-dismiss="alert"></button>
     <strong>Success!</strong> Positive Affirmations !
   </div>
+  <button type="button" class="btn btn-dark">
+    <span class= "badge bg-danger">18</span>
 </h2>
 <h3>
   <div class="progress">
@@ -44,6 +50,16 @@
       <button type="button" class="btn btn-outline-danger">Danger</button>
   </div>
 </div>
+<h4>
+  <ul class="pagination">
+<li class="page-item"><a class="page-link" href="#">Previous</a></li>
+<li class="page-item"><a class="page-link" href="index.html">Bootstrap Practice</a></li>
+<li class="page-item"><a class="page-link" href="copy2.html">Bootstrap 2</a></li>
+<li class="page-item"><a class="page-link" href="copy3.html">Bootstrap 3</a></li>
+<li class="page-item"><a class="page-link" href="#">Next</a></li>
+</ul>
+</div>
+</h4>
 <button type="button" class="btn btn-outline-danger btn-lg">Click Me!</button>
  <table class="table table-dark">
     <thead>
