pagination and spinners

--- a/copy2.html
+++ b/copy2.html
@@ -8,7 +8,7 @@
 <html>
 <body>
   <h1>
-    <ul class="pagination">
+    <ul class="pagination fixed-bottom">
   <li class="page-item"><a class="page-link" href="#">Previous</a></li>
   <li class="page-item"><a class="page-link" href="index.html">Bootstrap Practice</a></li>
   <li class="page-item"><a class="page-link" href="copy2.html">Bootstrap 2</a></li>
@@ -19,7 +19,7 @@
   </h1>
   <h2>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-    Open modal
+    click me
   </button>
 </div>
 
@@ -47,5 +47,20 @@
     </div>
   </div>
 </div>
-  </body>
-  </html>
+
+<div class= "spinner-grow text-info"></div>
+<div class= "spinner-grow text-warning"></div>
+<div class= "spinner-grow text-danger"></div>
+<div class= "spinner-border text-muted"></div>
+<h5>
+<form action="/action_page.php">
+   <div class="form-check form-switch">
+     <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes" checked>
+     <label class="form-check-label" for="mySwitch">Dark Mode</label>
+   </div>
+   <button type="submit" class="btn btn-primary mt-3">Submit</button>
+ </form>
+</div>
+</h5>
+</body>
+</html>
