--- a/copy3.html
+++ b/copy3.html
@@ -8,7 +8,7 @@
 <html>
 <body>
   <h1>
-    <ul class="pagination">
+    <ul class="pagination fixed-bottom">
   <li class="page-item"><a class="page-link" href="#">Previous</a></li>
   <li class="page-item"><a class="page-link" href="index.html">Bootstrap Practice</a></li>
   <li class="page-item"><a class="page-link" href="copy2.html">Bootstrap 2</a></li>
@@ -21,7 +21,7 @@
   <h2>
     <div class="card" style= "width:400px">
       <div class="card-body">
-        <h2 class= "card-title">Zy</h2>
+        <h2 class= "card-title"></h2>
       <a href="download.png" class="btn btn-primary">See Profile</a>
 <p class="card-text">This is my first boostrap card</p>
     </div>
