--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 </div>
 <h4>
-  <ul class="pagination">
+  <ul class="pagination fixed-bottom">
 <li class="page-item"><a class="page-link" href="#">Previous</a></li>
 <li class="page-item"><a class="page-link" href="index.html">Bootstrap Practice</a></li>
 <li class="page-item"><a class="page-link" href="copy2.html">Bootstrap 2</a></li>
