--- a/copy2.html
+++ b/copy2.html
@@ -62,5 +62,23 @@
  </form>
 </div>
 </h5>
+
+<h6>
+
+  <ul class="list group">
+    <li class="list-group-item-info d-flex justify-content-between align-items-center">
+      Pictures
+      <span class="badge bg-primary rounded-pill">5077</span>
+    </li>
+    <li class= "list-group-item-primary d-flex justify-content-between align-items-center">
+    Ads
+        <span class="badge bg-primary rounded-pill">1099</span>
+      </li>
+      <li class="list-group-item-warning d-flex justify-content-between align-items-center">
+        Emails
+        <span class="badge bg-primary rounded-pill">2897</span>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
