--- a/copy2.html
+++ b/copy2.html
@@ -80,5 +80,60 @@
       </li>
     </ul>
   </div>
+</h6>
+
+<h7>
+
+  <button type= "button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">
+    Collapse</button>
+    <div id="demo" class="collapse">
+      This is a test collapse I am just testinggggg
+      ggggggggggggggggg.
+    </div>
+  </div>
+
+  <h8>
+
+    <div id="accordion">
+      <div class= "card">
+        <div class="card-header">
+          <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+            group one
+          </a>
+        </div>
+        <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+          <div class="card-body">
+
+          </div>
+        </div>
+      </div>
+      <div class= "card">
+        <div class="card-header">
+          <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
+            group two
+</a>
+</div>
+<div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+  <div class="card-body">
+
+  </div>
+</div>
+</div>
+<div class="card">
+  <div class="card-header">
+    <a class="collapseThree" class="collapse" data-bs-parent= "#accordion">
+      <div class="card-body">
+
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="card">
+  <div class="card-header">
+    <a class="collapseFour" class="collapse" data-bs-parent= "#accordion">
+      <div class="card-body">
+
 </body>
 </html>
