--- a/copy3.html
+++ b/copy3.html
@@ -18,32 +18,35 @@
 
   </h1>
 
-  <h2>
-    <div class="card" style= "width:300px">
-      <div class="card-body">
-        <h2 class= "card-title"></h2>
-      <a href="download.png" class="btn btn-primary">See Profile</a>
-<p class="card-text">This is my first boostrap card</p>
-    </div>
-    <img class="card-img-bottom" src="download.png" alt="Card image" style="width:50%">
-  </div>
-  <div class="card img-fluid" style="width:300px">
-    <img class="card-img-top" src="ace-spades-playing-card-isolated-260nw-338074880.jpg" alt="Card image" style="width:50%">
-    <div class="card-img-overlay">
-      <h4 class="card-title">Ace</h4>
-      <p class="card-text">Some example text some example text. Some example text some example text. Some example text some example text. Some example text some example text.</p>
-      <a href="ace-spades-playing-card-isolated-260nw-338074880.jpg" class="btn btn-primary">See Profile</a>
-    </div>
-  </div>
-</div>
-<div class="card img-fluid" style="width:500px">
-  <img class="card-img-top" src="download (1).png" alt="Card image" style="width:50%">
-  <div class="card-img-overlay">
-    <h4 class="card-title">Joker</h4>
-    <p class="card-text">Joker card. Joker card. Joker card. Joker card. Joker card.</p>
-    <a href="#" class="btn btn-primary">See Profile</a>
-  </div>
-</div>
+  <div class="card" style="width:400px">
+     <img class="card-img-top" src="ace-spades-playing-card-isolated-260nw-338074880.jpg" alt="Card image" style="width:100%">
+     <div class="card-body">
+       <h4 class="card-title">Ace of Spades</h4>
+       <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+       <a href="ace-spades-playing-card-isolated-260nw-338074880.jpg" class="btn btn-primary">See Profile</a>
+     </div>
+   </div>
+   
+
+
+   <div class="card" style="width:400px">
+     <div class="card-body">
+       <h4 class="card-title">Joker</h4>
+       <p class="card-text">Some example text some example text. Jane Doe is an architect and engineer</p>
+       <a href="download (1).png" class="btn btn-primary">See Profile</a>
+     </div>
+     <img class="card-img-bottom" src="download (1).png" alt="Card image" style="width:100%">
+   </div>
+ </div>
+
+ <div class="card" style="width:400px">
+   <div class="card-body">
+     <h4 class="card-title">Joker</h4>
+     <p class="card-text">Some example text some example text. Jane Doe is an architect and engineer</p>
+     <a href="download (1).png" class="btn btn-primary">See Profile</a>
+   </div>
+   <img class="card-img-bottom" src="download (1).png" alt="Card image" style="width:100%">
+ </div>
 </div>
   </body>
   </html>
