navbar= good nav= not done

--- a/copy2.html
+++ b/copy2.html
@@ -7,6 +7,34 @@
 
 <html>
 <body>
+
+  <nav class="navbar navbar-expand-sm navbar-dark bg-info fixed-top justify-content-center">
+
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mynavbar">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="copy2.html">Page 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="copy3.html">Page 3</a>
+        </li>
+
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="text" placeholder="Search">
+        <button class="btn btn-primary" type="button">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+
+
   <h1>
     <ul class="pagination fixed-bottom">
   <li class="page-item"><a class="page-link" href="#">Previous</a></li>
@@ -92,7 +120,7 @@
     </div>
   </div>
 
-  <h8>
+
 
     <div id="accordion">
       <div class= "card">
@@ -113,27 +141,26 @@
             group two
 </a>
 </div>
+
+
 <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
   <div class="card-body">
 
-  </div>
 </div>
-</div>
-<div class="card">
-  <div class="card-header">
-    <a class="collapseThree" class="collapse" data-bs-parent= "#accordion">
-      <div class="card-body">
+<
+    <ul class="nav flex-column">
+       <li class="nav-item">
+         <a class="nav-link" href="https://classroom.google.com/h">w3 schools</a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="https://classroom.google.com/h">google docs</a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="https://classroom.google.com/h">google classroom</a>
+       </li>
 
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-
-<div class="card">
-  <div class="card-header">
-    <a class="collapseFour" class="collapse" data-bs-parent= "#accordion">
-      <div class="card-body">
+     </ul>
+   </div>
 
 </body>
 </html>
