--- a/copy3.html
+++ b/copy3.html
@@ -7,6 +7,31 @@
 
 <html>
 <body>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top justify-content-center">
+
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mynavbar">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link acive" href="copy2.html">Page 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="copy3.html">Page 3</a>
+        </li>
+
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="text" placeholder="Search">
+        <button class="btn btn-primary" type="button">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
   <h1>
     <ul class="pagination fixed-bottom">
   <li class="page-item"><a class="page-link" href="#">Previous</a></li>
@@ -26,7 +51,7 @@
        <a href="ace-spades-playing-card-isolated-260nw-338074880.jpg" class="btn btn-primary">See Profile</a>
      </div>
    </div>
-   
+
 
 
    <div class="card" style="width:400px">
