--- a/copy3.html
+++ b/copy3.html
@@ -22,7 +22,9 @@
         <li class="nav-item">
           <a class="nav-link" href="copy3.html">Page 3</a>
         </li>
-
+        <li class="nav-item">
+          <a class="nav-link" href="copy4.html">Page 4</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="text" placeholder="Search">
