--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
     </div>
     </nav>
 
+    <div id="demo" class="carousel-indicators">
+      <button type="button" data-bs-target="#demo"
+      data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#demo"
+      data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="demo"
+      data-bs-slide-to="2"></button>
+    </div>
+
+    <div class="carousel-inner">
+  <div class="carousel-item active">
+    <img src="rottweiler.jpeg" alt="rottypup" class="d-block" style="width:75%">
+  </div>
+  <div class="carousel-item">
+    <img src="blue pit.jfif" alt="blue pit" class="d-block" style="width:75%">
+  </div>
+  <div class="carousel-item">
+    <img src="husky pup.jpg" alt="husky" class="d-block" style="width:75%">
+  </div>
+</div>
+<button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+   <span class="carousel-control-prev-icon"></span>
+ </button>
+ <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+   <span class="carousel-control-next-icon"></span>
+ </button>
+</div>
+
   <div class="container-fluid mt-3">
     <div class="row">
       <div class="col-sm-3 p-3 bg-info text-black">1</div>
